Version 1.1.4 -Fixed contact form alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Description: Personal site Child Theme for the Beans Theme.
 Author: John Cosio
 Author URI: http://jcos.io
 Template: tm-beans
-Version: 1.1.3
+Version: 1.1.4
 Text Domain: tm-beans
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -211,7 +211,7 @@ footer .menu li a{
 
 .wpcf7-form .singleline input{
     margin-top: 0.7em;
-    width: 100%;
+    width: 99%;
 }
 
 .wpcf7-form .singleline.full-width textarea {
